--- a/src/main/resources/styles/styles.css
+++ b/src/main/resources/styles/styles.css
@@ -54,6 +54,8 @@
 .window_background{
 	-fx-background-color: #f1ede1;
 	-fx-background-size: cover;
+	-fx-border-color: #3e3e3e;
+	-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 10, 0, 4, 4); 
 }
 .button_close{
 	-fx-background-repeat: no-repeat;
@@ -65,4 +67,8 @@
 	-fx-background-position: center;
 	-fx-pref-width: 16px;
 	-fx-pref-height: 16px;
+}
+.close_area{
+	-fx-background-color: #e4dcc6;
+	-fx-background-radius: 0 0 5px 5px;
 }
