--- a/src/main/resources/views/imitation.fxml
+++ b/src/main/resources/views/imitation.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane fx:id="anchorPane" prefHeight="500.0" prefWidth="1000.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="14.0" layoutY="10.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-image: &quot;@pics/icons8-play-48.png&quot;;" stylesheets="@../styles/styles.css" wrapText="true">
+      <Button layoutX="14.0" layoutY="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-image: &quot;@pics/icons8-play-48.png&quot;;" stylesheets="@../styles/styles.css" wrapText="true">
          <font>
             <Font size="24.0" />
          </font>
@@ -19,7 +19,7 @@
             <String fx:value="button_play" />
          </styleClass>
       </Button>
-      <Button layoutX="84.0" layoutY="10.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" stylesheets="@../styles/styles.css" wrapText="true">
+      <Button layoutX="84.0" layoutY="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" stylesheets="@../styles/styles.css" wrapText="true">
          <font>
             <Font size="16.0" />
          </font>
@@ -28,7 +28,7 @@
             <String fx:value="button_pause" />
          </styleClass>
       </Button>
-      <Button layoutX="154.0" layoutY="10.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" stylesheets="@../styles/styles.css" wrapText="true">
+      <Button layoutX="154.0" layoutY="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" stylesheets="@../styles/styles.css" wrapText="true">
          <font>
             <Font name="Arial" size="26.0" />
          </font>
@@ -66,12 +66,12 @@
       </Button>
       <Line endX="-47.0" endY="310.0" layoutX="267.0" layoutY="190.0" startX="-47.0" startY="-190.0" />
       <Line endX="86.0" endY="315.0" layoutX="736.0" layoutY="186.0" startX="86.0" startY="-186.0" />
-      <Label layoutX="834.0" layoutY="35.0" styleClass="text" stylesheets="@../styles/styles.css" text="Информационное табло">
+      <Label layoutX="834.0" layoutY="82.0" styleClass="text" stylesheets="@../styles/styles.css" text="Информационное табло">
          <font>
             <Font size="17.0" />
          </font>
       </Label>
-      <TextArea fx:id="log_list" blendMode="MULTIPLY" disable="true" editable="false" layoutX="823.0" layoutY="62.0" prefHeight="317.0" prefWidth="177.0" />
+      <TextArea fx:id="log_list" blendMode="MULTIPLY" disable="true" editable="false" layoutX="823.0" layoutY="111.0" prefHeight="268.0" prefWidth="177.0" />
       <Label layoutX="875.0" layoutY="393.0" styleClass="text" stylesheets="@../styles/styles.css" text="Статистика">
          <font>
             <Font size="17.0" />
@@ -107,10 +107,14 @@
             <Font size="17.0" />
          </font>
       </Label>
-      <Button fx:id="closeButton" layoutX="232.0" layoutY="24.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="5.0">
-         <font>
-            <Font size="6.0" />
-         </font>
-      </Button>
+      <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="1001.0" styleClass="close_area" stylesheets="@../styles/styles.css">
+         <children>
+            <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
+               <font>
+                  <Font size="6.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
