--- a/src/main/resources/views/main.fxml
+++ b/src/main/resources/views/main.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="187.0" prefWidth="220.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<AnchorPane fx:id="anchorPane" prefHeight="196.0" prefWidth="221.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <children>
-      <Button layoutX="5.0" layoutY="66.0" mnemonicParsing="false" onAction="#downloadTopology" prefHeight="51.0" prefWidth="356.0" stylesheets="@../styles/styles.css" text="Загрузить топологию" AnchorPane.leftAnchor="10.0">
+      <Button layoutX="11.0" layoutY="78.0" mnemonicParsing="false" onAction="#downloadTopology" prefHeight="51.0" prefWidth="356.0" stylesheets="@../styles/styles.css" text="Загрузить топологию" AnchorPane.leftAnchor="11.0">
          <font>
             <Font size="20.0" />
          </font>
@@ -16,7 +16,7 @@
             <String fx:value="button_restyling_bounds" />
          </styleClass>
       </Button>
-      <Button layoutX="5.0" layoutY="106.0" mnemonicParsing="false" onAction="#developerInfo" prefHeight="51.0" prefWidth="168.0" stylesheets="@../styles/styles.css" text="О разработчиках" AnchorPane.leftAnchor="10.0">
+      <Button layoutX="11.0" layoutY="118.0" mnemonicParsing="false" onAction="#developerInfo" prefHeight="51.0" prefWidth="168.0" stylesheets="@../styles/styles.css" text="О разработчиках" AnchorPane.leftAnchor="11.0">
          <font>
             <Font size="20.0" />
          </font>
@@ -25,7 +25,7 @@
             <String fx:value="button_restyling_bounds" />
          </styleClass>
       </Button>
-      <Button layoutX="5.0" layoutY="146.0" mnemonicParsing="false" onAction="#systemInfo" prefHeight="51.0" prefWidth="356.0" stylesheets="@../styles/styles.css" text="Сведения о системе" AnchorPane.leftAnchor="10.0">
+      <Button layoutX="11.0" layoutY="158.0" mnemonicParsing="false" onAction="#systemInfo" prefHeight="51.0" prefWidth="356.0" stylesheets="@../styles/styles.css" text="Сведения о системе" AnchorPane.leftAnchor="11.0">
          <font>
             <Font size="20.0" />
          </font>
@@ -34,7 +34,7 @@
             <String fx:value="button_restyling_bounds" />
          </styleClass>
       </Button>
-      <Button fx:id="createTopologyButton" layoutX="5.0" layoutY="26.0" mnemonicParsing="false" onAction="#createTopology" prefHeight="51.0" prefWidth="356.0" stylesheets="@../styles/styles.css" text="Создать топологию" AnchorPane.leftAnchor="10.0">
+      <Button fx:id="createTopologyButton" layoutX="11.0" layoutY="38.0" mnemonicParsing="false" onAction="#createTopology" prefHeight="51.0" prefWidth="356.0" stylesheets="@../styles/styles.css" text="Создать топологию" AnchorPane.leftAnchor="11.0">
          <font>
             <Font size="20.0" />
          </font>
@@ -43,10 +43,14 @@
             <String fx:value="button_restyling_bounds" />
          </styleClass>
       </Button>
-      <Button fx:id="closeButton" layoutX="296.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="5.0">
-         <font>
-            <Font size="6.0" />
-         </font>
-      </Button>
+      <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="219.0" styleClass="close_area" stylesheets="@../styles/styles.css">
+         <children>
+            <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
+               <font>
+                  <Font size="6.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
