--- a/src/main/resources/views/modeller.fxml
+++ b/src/main/resources/views/modeller.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane fx:id="anchorPane" prefHeight="500.0" prefWidth="1000.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ModellerController">
    <children>
-      <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Запомнить параметры" wrapText="true">
+      <Button layoutX="10.0" layoutY="43.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Запомнить параметры" wrapText="true">
          <font>
             <Font size="17.0" />
          </font>
@@ -21,7 +21,7 @@
             <String fx:value="button_restyling_bounds" />
          </styleClass>
       </Button>
-      <Button layoutX="10.0" layoutY="50.0" mnemonicParsing="false" onAction="#createDBWork" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Работа с БД" wrapText="true">
+      <Button layoutX="10.0" layoutY="83.0" mnemonicParsing="false" onAction="#createDBWork" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Работа с БД" wrapText="true">
          <font>
             <Font size="17.0" />
          </font>
@@ -30,7 +30,7 @@
             <String fx:value="button_restyling_bounds" />
          </styleClass>
       </Button>
-      <Button layoutX="10.0" layoutY="90.0" mnemonicParsing="false" onAction="#createImitation" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Перейти к имитации" wrapText="true">
+      <Button layoutX="10.0" layoutY="123.0" mnemonicParsing="false" onAction="#createImitation" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Перейти к имитации" wrapText="true">
          <font>
             <Font size="17.0" />
          </font>
@@ -41,46 +41,46 @@
       </Button>
       <Line endX="-47.0" endY="310.0" layoutX="267.0" layoutY="190.0" startX="-47.0" startY="-190.0" />
       <Line endX="86.0" endY="315.0" layoutX="466.0" layoutY="185.0" startX="86.0" startY="-186.0" />
-      <Label layoutX="242.0" layoutY="21.0" stylesheets="@../styles/styles.css" text="ПАРАМЕТРЫ ЭЛЕМЕНТОВ">
+      <Label layoutX="242.0" layoutY="47.0" stylesheets="@../styles/styles.css" text="ПАРАМЕТРЫ ЭЛЕМЕНТОВ">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="578.0" layoutY="21.0" stylesheets="@../styles/styles.css" text="ПАРАМЕТРЫ ПОТОКА">
+      <Label layoutX="579.0" layoutY="47.0" stylesheets="@../styles/styles.css" text="ПАРАМЕТРЫ ПОТОКА">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="240.0" layoutY="82.0" stylesheets="@../styles/styles.css" text="Объем ТБ:">
+      <Label layoutX="240.0" layoutY="108.0" stylesheets="@../styles/styles.css" text="Объем ТБ:">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Label layoutX="239.0" layoutY="124.0" stylesheets="@../styles/styles.css" text="Критический уровень ТБ:">
+      <Label layoutX="239.0" layoutY="150.0" stylesheets="@../styles/styles.css" text="Критический уровень ТБ:">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Label layoutX="241.0" layoutY="162.0" stylesheets="@../styles/styles.css" text="Скорость ТРК:">
+      <Label layoutX="241.0" layoutY="188.0" stylesheets="@../styles/styles.css" text="Скорость ТРК:">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Label layoutX="242.0" layoutY="206.0" stylesheets="@../styles/styles.css" text="Лимит кассы:">
+      <Label layoutX="242.0" layoutY="232.0" stylesheets="@../styles/styles.css" text="Лимит кассы:">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Label layoutX="239.0" layoutY="250.0" stylesheets="@../styles/styles.css" text="Виды топлива:">
+      <Label layoutX="239.0" layoutY="276.0" stylesheets="@../styles/styles.css" text="Виды топлива:">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Spinner id="spinnerFuelTankVolume" fx:id="fuelTankVolume" blendMode="MULTIPLY" editable="true" layoutX="434.0" layoutY="74.0" max="20000" min="5000" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" />
-      <Spinner id="spinnerFuelTankCriticalLevel" fx:id="fuelTankCriticalLevel" blendMode="MULTIPLY" editable="true" layoutX="434.0" layoutY="115.0" max="90" min="10" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" />
-      <Spinner id="spinnerPetrolStationSpeed" fx:id="petrolStationSpeed" blendMode="MULTIPLY" editable="true" layoutX="434.0" layoutY="154.0" max="100" min="50" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" />
-      <Spinner id="spinnerCashboxCriticalLevel" fx:id="cashboxCriticalLevel" blendMode="MULTIPLY" editable="true" layoutX="434.0" layoutY="198.0" max="100000" min="10000" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" />
-      <RadioButton id="radioButtonDeterministicDistribution" fx:id="radioButtonDeterministicDistribution" blendMode="MULTIPLY" layoutX="576.0" layoutY="83.0" mnemonicParsing="false" stylesheets="@../styles/styles.css" text="Детерминированный закон">
+      <Spinner id="spinnerFuelTankVolume" fx:id="fuelTankVolume" blendMode="MULTIPLY" editable="true" layoutX="434.0" layoutY="100.0" max="20000" min="5000" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" />
+      <Spinner id="spinnerFuelTankCriticalLevel" fx:id="fuelTankCriticalLevel" blendMode="MULTIPLY" editable="true" layoutX="434.0" layoutY="141.0" max="90" min="10" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" />
+      <Spinner id="spinnerPetrolStationSpeed" fx:id="petrolStationSpeed" blendMode="MULTIPLY" editable="true" layoutX="434.0" layoutY="180.0" max="100" min="50" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" />
+      <Spinner id="spinnerCashboxCriticalLevel" fx:id="cashboxCriticalLevel" blendMode="MULTIPLY" editable="true" layoutX="434.0" layoutY="224.0" max="100000" min="10000" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" />
+      <RadioButton id="radioButtonDeterministicDistribution" fx:id="radioButtonDeterministicDistribution" blendMode="MULTIPLY" layoutX="581.0" layoutY="100.0" mnemonicParsing="false" stylesheets="@../styles/styles.css" text="Детерминированный закон">
          <font>
             <Font size="15.0" />
          </font>
@@ -88,50 +88,54 @@
             <ToggleGroup fx:id="distributions" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton id="radioButtonUniformDistribution" fx:id="radioButtonUniformDistribution" blendMode="MULTIPLY" layoutX="576.0" layoutY="170.0" mnemonicParsing="false" stylesheets="@../styles/styles.css" text="Случайный (Равномерный закон)" toggleGroup="$distributions">
+      <RadioButton id="radioButtonUniformDistribution" fx:id="radioButtonUniformDistribution" blendMode="MULTIPLY" layoutX="581.0" layoutY="187.0" mnemonicParsing="false" stylesheets="@../styles/styles.css" text="Случайный (Равномерный закон)" toggleGroup="$distributions">
          <font>
             <Font size="15.0" />
          </font>
       </RadioButton>
-      <RadioButton id="radioButtonExponentialDistribution" fx:id="radioButtonExponentialDistribution" blendMode="MULTIPLY" layoutX="576.0" layoutY="293.0" mnemonicParsing="false" stylesheets="@../styles/styles.css" text="Случайный (Экспоненциальный закон)" toggleGroup="$distributions">
+      <RadioButton id="radioButtonExponentialDistribution" fx:id="radioButtonExponentialDistribution" blendMode="MULTIPLY" layoutX="581.0" layoutY="310.0" mnemonicParsing="false" stylesheets="@../styles/styles.css" text="Случайный (Экспоненциальный закон)" toggleGroup="$distributions">
          <font>
             <Font size="15.0" />
          </font>
       </RadioButton>
-      <Label id="labelTime" fx:id="labelTime" layoutX="576.0" layoutY="123.0" stylesheets="@../styles/styles.css" text="Время появления а/м:" visible="false">
+      <Label id="labelTime" fx:id="labelTime" layoutX="581.0" layoutY="140.0" stylesheets="@../styles/styles.css" text="Время появления а/м:" visible="false">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Label id="labelMatO" fx:id="labelMatO" layoutX="577.0" layoutY="206.0" stylesheets="@../styles/styles.css" text="Мат Ожидание:" visible="false">
+      <Label id="labelMatO" fx:id="labelMatO" layoutX="582.0" layoutY="223.0" stylesheets="@../styles/styles.css" text="Мат Ожидание:" visible="false">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Label id="labelDispersion" fx:id="labelDispersion" layoutX="578.0" layoutY="249.0" stylesheets="@../styles/styles.css" text="Дисперсия:" visible="false">
+      <Label id="labelDispersion" fx:id="labelDispersion" layoutX="583.0" layoutY="266.0" stylesheets="@../styles/styles.css" text="Дисперсия:" visible="false">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Label id="labelIntens" fx:id="labelIntens" layoutX="576.0" layoutY="325.0" stylesheets="@../styles/styles.css" text="Интенсивность:" visible="false">
+      <Label id="labelIntens" fx:id="labelIntens" layoutX="581.0" layoutY="342.0" stylesheets="@../styles/styles.css" text="Интенсивность:" visible="false">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Spinner id="spinnerTime" fx:id="time" blendMode="MULTIPLY" editable="true" layoutX="848.0" layoutY="115.0" max="10" min="1" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" visible="false" />
-      <Spinner id="spinnerMatO" fx:id="matO" blendMode="MULTIPLY" editable="true" layoutX="848.0" layoutY="198.0" max="10" min="1" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" visible="false" />
-      <Spinner id="spinnerDispersion" fx:id="dispersion" blendMode="MULTIPLY" editable="true" layoutX="848.0" layoutY="242.0" max="4.5" min="0" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" visible="false" />
-      <Spinner id="spinnerIntens" fx:id="intens" blendMode="MULTIPLY" editable="true" layoutX="848.0" layoutY="318.0" max="4" min="1" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" visible="false" />
-      <Label id="labelPOA" layoutX="573.0" layoutY="384.0" stylesheets="@../styles/styles.css" text="Вероятность заезда а/м:">
+      <Spinner id="spinnerTime" fx:id="time" blendMode="MULTIPLY" editable="true" layoutX="853.0" layoutY="132.0" max="10" min="1" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" visible="false" />
+      <Spinner id="spinnerMatO" fx:id="matO" blendMode="MULTIPLY" editable="true" layoutX="853.0" layoutY="215.0" max="10" min="1" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" visible="false" />
+      <Spinner id="spinnerDispersion" fx:id="dispersion" blendMode="MULTIPLY" editable="true" layoutX="853.0" layoutY="259.0" max="4.5" min="0" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" visible="false" />
+      <Spinner id="spinnerIntens" fx:id="intens" blendMode="MULTIPLY" editable="true" layoutX="853.0" layoutY="335.0" max="4" min="1" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" visible="false" />
+      <Label id="labelPOA" layoutX="578.0" layoutY="401.0" stylesheets="@../styles/styles.css" text="Вероятность заезда а/м:">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Spinner id="spinnerPOA" fx:id="probabilityOfArrival" blendMode="MULTIPLY" editable="true" layoutX="848.0" layoutY="378.0" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" />
-      <Button fx:id="closeButton" layoutX="232.0" layoutY="24.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="5.0">
-         <font>
-            <Font size="6.0" />
-         </font>
-      </Button>
+      <Spinner id="spinnerPOA" fx:id="probabilityOfArrival" blendMode="MULTIPLY" editable="true" layoutX="853.0" layoutY="395.0" prefHeight="34.0" prefWidth="102.0" stylesheets="@../styles/styles.css" />
+      <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="1000.0" styleClass="close_area" stylesheets="@../styles/styles.css">
+         <children>
+            <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
+               <font>
+                  <Font size="6.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
