--- a/src/main/resources/views/topologySize.fxml
+++ b/src/main/resources/views/topologySize.fxml
@@ -18,12 +18,12 @@
             <String fx:value="button_restyling_bounds" />
          </styleClass>
       </Button>
-      <Label layoutX="14.0" layoutY="29.0" styleClass="text" stylesheets="@../styles/styles.css" text="ВВЕДИТЕ ДАННЫЕ:">
+      <Label layoutX="11.0" layoutY="42.0" styleClass="text" stylesheets="@../styles/styles.css" text="ВВЕДИТЕ ДАННЫЕ:">
          <font>
             <Font size="43.0" />
          </font>
       </Label>
-      <Label layoutX="14.0" layoutY="78.0" styleClass="text" stylesheets="@../styles/styles.css" text="ВЫСОТА:">
+      <Label layoutX="14.0" layoutY="84.0" styleClass="text" stylesheets="@../styles/styles.css" text="ВЫСОТА:">
          <font>
             <Font size="43.0" />
          </font>
@@ -33,12 +33,16 @@
             <Font size="43.0" />
          </font>
       </Label>
-      <Spinner fx:id="topologyHeight" blendMode="MULTIPLY" layoutX="154.0" layoutY="75.0" max="6" min="3" prefHeight="18.0" prefWidth="84.0" />
+      <Spinner fx:id="topologyHeight" blendMode="MULTIPLY" layoutX="154.0" layoutY="81.0" max="6" min="3" prefHeight="18.0" prefWidth="84.0" />
       <Spinner fx:id="topologyWidth" blendMode="MULTIPLY" layoutX="154.0" layoutY="113.0" max="10" min="7" prefHeight="25.0" prefWidth="84.0" />
-      <Button fx:id="closeButton" layoutX="222.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="5.0">
-         <font>
-            <Font size="6.0" />
-         </font>
-      </Button>
+      <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="252.0" styleClass="close_area" stylesheets="@../styles/styles.css">
+         <children>
+            <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
+               <font>
+                  <Font size="6.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
