feat: back buttons added

--- a/src/main/resources/views/constructor.fxml
+++ b/src/main/resources/views/constructor.fxml
@@ -59,6 +59,11 @@
                   <Font size="6.0" />
                </font>
             </Button>
+            <Button fx:id="back_button" layoutX="24.0" layoutY="19.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" styleClass="button_back" stylesheets="@../styles/styles.css" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="7.0">
+               <font>
+                  <Font size="6.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
       <ScrollPane fx:id="scrollPaneElements" blendMode="MULTIPLY" layoutX="735.0" layoutY="71.0" prefHeight="322.0" prefWidth="166.0">
