--- a/src/main/resources/styles/styles.css
+++ b/src/main/resources/styles/styles.css
@@ -55,11 +55,11 @@
 	-fx-background-color: #f1ede1;
 	-fx-background-size: cover;
 	-fx-border-color: #3e3e3e;
-	-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 10, 0, 4, 4); 
+	/*-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 10, 0, 4, 4); */
 }
 .button_close{
 	-fx-background-repeat: no-repeat;
-	-fx-border-radius: 25px;
+	-fx-border-radius: 5px;
 	-fx-border-color: #C62121;
 	-fx-background-color: transparent;
 	-fx-background-image: url("../pics/icons-x.png");
@@ -67,6 +67,19 @@
 	-fx-background-position: center;
 	-fx-pref-width: 16px;
 	-fx-pref-height: 16px;
+}
+.button_back{
+	-fx-background-repeat: no-repeat;
+	-fx-border-radius: 5px;
+	-fx-border-color: #3e3e3e;
+	-fx-background-color: transparent;
+	-fx-background-image: url("../pics/icons-back.png");
+	-fx-background-size: 18px;
+	-fx-background-position: center;
+	-fx-pref-width: 16px;
+	-fx-pref-height: 16px;
+	-fx-min-width: -fx-pref-width;
+	-fx-min-height: -fx-pref-height; 
 }
 .close_area{
 	-fx-background-color: #e4dcc6;
