--- a/src/main/resources/views/developerInfo.fxml
+++ b/src/main/resources/views/developerInfo.fxml
@@ -8,16 +8,16 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
     <rowConstraints>
         <RowConstraints />
     </rowConstraints>
-    <AnchorPane prefHeight="170.0" prefWidth="384.0" styleClass="window_background" stylesheets="@../styles/styles.css">
+    <AnchorPane prefHeight="284.0" prefWidth="364.0" styleClass="window_background" stylesheets="@../styles/styles.css">
       <children>
-         <TextArea blendMode="MULTIPLY" editable="false" layoutX="13.0" layoutY="44.0" prefHeight="109.0" prefWidth="359.0" styleClass="text" stylesheets="@../styles/styles.css" text="Список разработчиков: &#10;&#9;Конев Алексей&#10;       Сергеев Никита&#10;       Фомичёв Антон">
+         <TextArea blendMode="MULTIPLY" editable="false" layoutX="13.0" layoutY="44.0" prefHeight="223.0" prefWidth="341.0" styleClass="text" stylesheets="@../styles/styles.css" text="&#9;&#9;Лабораторный практикум&#10;по дисциплине &quot;Технологии программирования&quot;&#10;&#9;Проект &quot;Система моделирования работы&#10;&#9;&#9;автозаправочной станции&quot;&#10;Разработчики:&#10;Конев А.В.&#10;Сергеев Н.С.&#10;Фомичёв А.В.&#10;&#9;&#9;&#9;гр.6402-090301D&#10;&#9;&#9;Самарский Университет, 2019">
             <font>
                <Font size="29.0" />
             </font>
