--- a/src/main/resources/views/topologySize.fxml
+++ b/src/main/resources/views/topologySize.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="201.0" prefWidth="252.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BoundsController">
+<AnchorPane prefHeight="201.0" prefWidth="252.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BoundsController">
    <children>
       <Button fx:id="okButton" layoutX="22.0" layoutY="154.0" mnemonicParsing="false" onAction="#createConstructor" prefHeight="51.0" prefWidth="99.0" stylesheets="@../styles/styles.css" text="ОК">
          <font>
@@ -18,7 +18,7 @@
             <String fx:value="button_restyling_bounds" />
          </styleClass>
       </Button>
-      <Label layoutX="11.0" layoutY="42.0" styleClass="text" stylesheets="@../styles/styles.css" text="ВВЕДИТЕ ДАННЫЕ:">
+      <Label layoutX="11.0" layoutY="42.0" styleClass="text" stylesheets="@../styles/styles.css" text="Введите размеры:">
          <font>
             <Font size="43.0" />
          </font>
