fix: deleting objects in imitation

--- a/src/main/resources/views/imitation.fxml
+++ b/src/main/resources/views/imitation.fxml
@@ -41,37 +41,7 @@
             </Button>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="backButtons" layoutX="10.0" layoutY="98.0">
-         <children>
-            <Button fx:id="inConstructorButton" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="В конструктор" wrapText="true">
-               <font>
-                  <Font size="17.0" />
-               </font>
-               <styleClass>
-                  <String fx:value="button_restyling" />
-                  <String fx:value="button_restyling_bounds" />
-               </styleClass>
-            </Button>
-            <Button layoutY="38.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="В моделирование" wrapText="true">
-               <font>
-                  <Font size="17.0" />
-               </font>
-               <styleClass>
-                  <String fx:value="button_restyling" />
-                  <String fx:value="button_restyling_bounds" />
-               </styleClass>
-            </Button>
-            <Button layoutY="76.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="В меню" wrapText="true">
-               <font>
-                  <Font size="17.0" />
-               </font>
-               <styleClass>
-                  <String fx:value="button_restyling" />
-                  <String fx:value="button_restyling_bounds" />
-               </styleClass>
-            </Button>
-         </children>
-      </AnchorPane>
+      <AnchorPane fx:id="backButtons" layoutX="10.0" layoutY="98.0" />
       <AnchorPane fx:id="statistics" layoutX="790.0" layoutY="353.0" prefHeight="87.0" prefWidth="170.0">
          <children>
             <Label layoutX="41.0" styleClass="text" stylesheets="@../styles/styles.css" text="Статистика">
@@ -124,6 +94,11 @@
       <AnchorPane fx:id="dragableArea" cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="1004.0" styleClass="close_area" stylesheets="@../styles/styles.css">
          <children>
             <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
+               <font>
+                  <Font size="6.0" />
+               </font>
+            </Button>
+            <Button fx:id="back_button" layoutX="18.0" layoutY="6.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" styleClass="button_back" stylesheets="@../styles/styles.css" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="7.0">
                <font>
                   <Font size="6.0" />
                </font>
