--- a/src/main/resources/views/main.fxml
+++ b/src/main/resources/views/main.fxml
@@ -5,45 +5,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="210.0" prefWidth="222.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<AnchorPane fx:id="anchorPane" prefHeight="300.0" prefWidth="400.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <children>
-      <Button layoutX="11.0" layoutY="85.0" mnemonicParsing="false" onAction="#downloadTopology" prefHeight="51.0" prefWidth="356.0" stylesheets="@../styles/styles.css" text="Загрузить топологию" AnchorPane.leftAnchor="11.0">
-         <font>
-            <Font size="20.0" />
-         </font>
-         <styleClass>
-            <String fx:value="button_restyling" />
-            <String fx:value="button_restyling_bounds" />
-         </styleClass>
-      </Button>
-      <Button layoutX="11.0" layoutY="125.0" mnemonicParsing="false" onAction="#developerInfo" prefHeight="51.0" prefWidth="168.0" stylesheets="@../styles/styles.css" text="О разработчиках" AnchorPane.leftAnchor="11.0">
-         <font>
-            <Font size="20.0" />
-         </font>
-         <styleClass>
-            <String fx:value="button_restyling" />
-            <String fx:value="button_restyling_bounds" />
-         </styleClass>
-      </Button>
-      <Button layoutX="11.0" layoutY="165.0" mnemonicParsing="false" onAction="#systemInfo" prefHeight="51.0" prefWidth="356.0" stylesheets="@../styles/styles.css" text="Сведения о системе" AnchorPane.leftAnchor="11.0">
-         <font>
-            <Font size="20.0" />
-         </font>
-         <styleClass>
-            <String fx:value="button_restyling" />
-            <String fx:value="button_restyling_bounds" />
-         </styleClass>
-      </Button>
-      <Button fx:id="createTopologyButton" layoutX="11.0" layoutY="45.0" mnemonicParsing="false" onAction="#createTopology" prefHeight="51.0" prefWidth="356.0" stylesheets="@../styles/styles.css" text="Создать топологию" AnchorPane.leftAnchor="11.0">
-         <font>
-            <Font size="20.0" />
-         </font>
-         <styleClass>
-            <String fx:value="button_restyling" />
-            <String fx:value="button_restyling_bounds" />
-         </styleClass>
-      </Button>
-      <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="219.0" styleClass="close_area" stylesheets="@../styles/styles.css">
+      <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="219.0" styleClass="close_area" stylesheets="@../styles/styles.css" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0">
          <children>
             <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
                <font>
@@ -52,5 +16,41 @@
             </Button>
          </children>
       </AnchorPane>
+      <Button fx:id="createTopologyButton" layoutX="100.0" layoutY="79.0" mnemonicParsing="false" onAction="#createTopology" prefHeight="51.0" prefWidth="356.0" stylesheets="@../styles/styles.css" text="Создать топологию">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <styleClass>
+            <String fx:value="button_restyling" />
+            <String fx:value="button_restyling_bounds" />
+         </styleClass>
+      </Button>
+      <Button layoutX="100.0" layoutY="124.0" mnemonicParsing="false" onAction="#downloadTopology" prefHeight="51.0" prefWidth="356.0" stylesheets="@../styles/styles.css" text="Загрузить топологию">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <styleClass>
+            <String fx:value="button_restyling" />
+            <String fx:value="button_restyling_bounds" />
+         </styleClass>
+      </Button>
+      <Button layoutX="100.0" layoutY="169.0" mnemonicParsing="false" onAction="#developerInfo" prefHeight="51.0" prefWidth="168.0" stylesheets="@../styles/styles.css" text="О разработчиках">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <styleClass>
+            <String fx:value="button_restyling" />
+            <String fx:value="button_restyling_bounds" />
+         </styleClass>
+      </Button>
+      <Button layoutX="100.0" layoutY="214.0" mnemonicParsing="false" onAction="#systemInfo" prefHeight="51.0" prefWidth="356.0" stylesheets="@../styles/styles.css" text="Сведения о системе">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <styleClass>
+            <String fx:value="button_restyling" />
+            <String fx:value="button_restyling_bounds" />
+         </styleClass>
+      </Button>
    </children>
 </AnchorPane>
